--- a/loginpage.html
+++ b/loginpage.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h2 class="logo">Trixia Historillo</h2>
+        <h2 class="logo">MARINDUQUE</h2>
         <nav class="navigation">
             <a href="#">Home</a>
             <a href="#">About</a>
